Added images and some formating

--- a/index.html
+++ b/index.html
@@ -10,59 +10,59 @@
 </head>
 <body>
     <Header>
-        <img id="logo" src="" alt="Logo">
+        <img id="logo" src="https://www.pinclipart.com/picdir/big/194-1945844_clip-art-food-japanese-cuisine-kawaii-hamburger-junk.png" alt="Logo">
         <H1>Welcome to Code: Rest!</H1>
     </Header>
     <main>
-    <article class="">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <article class="one">
+        <h2>Meal one</h2>
+        <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, cupiditate.</p>
     </article>
-    <article class="">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <article class="two">
+        <h2>Meal two</h2>
+        <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">        
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, magnam?</p>
     </article>
-    <article class="">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <article class="three">
+        <h2>Meal three</h2>
+        <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, tenetur?</p>
     </article>
-    <article class="">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <article class="four">
+        <h2>meal four</h2>
+        <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">        
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, cupiditate.</p>
     </article>
-    <article class="">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <article class="five">
+        <h2>Meal five</h2>
+        <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, commodi.</p>
     </article>
-    <article class="">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <article class="six">
+        <h2>Meal six</h2>
+        <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, optio!</p>
     </article>
-    <article class="">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <article class="seven">
+        <h2>Meal seven</h2>
+        <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis, ipsam!</p>
     </article>
-    <article class="">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <article class="eight">
+        <h2>Meal eight</h2>
+        <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, aperiam!</p>
     </article>
-    <article class="">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <article class="nine">
+        <h2>Meal nine</h2>
+        <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, eligendi.</p>
     </article>
-    <article class="">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <article class="ten">
+        <h2>Meal ten</h2>
+        <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, placeat.</p>
     </article>
 </main>
     
