added grid elements: edited the readme: added prices

--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code: Rest</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
-    <Header>
+    <header id="header">
         <img id="logo" src="https://www.pinclipart.com/picdir/big/194-1945844_clip-art-food-japanese-cuisine-kawaii-hamburger-junk.png" alt="Logo">
         <H1>Welcome to Code: Rest!</H1>
-    </Header>
-    <main>
+        <nav>
+            <a href="https://google.ca" target="_blank">Google</a>
+        </nav>
+    </header>
+    <main id="main">
     <article class="one">
         <h2>Meal one</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, cupiditate.</p>
+        <p>Price: $30</p>
     </article>
     <article class="two">
         <h2>Meal two</h2>
@@ -28,41 +33,49 @@
         <h2>Meal three</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">        
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, tenetur?</p>
+        <p>Price: $30</p>
     </article>
     <article class="four">
         <h2>meal four</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">        
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, cupiditate.</p>
+        <p>Price: $30</p>
     </article>
     <article class="five">
         <h2>Meal five</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, commodi.</p>
+        <p>Price: $30</p>
     </article>
     <article class="six">
         <h2>Meal six</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, optio!</p>
+        <p>Price: $30</p>
     </article>
     <article class="seven">
         <h2>Meal seven</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis, ipsam!</p>
+        <p>Price: $30</p>
     </article>
     <article class="eight">
         <h2>Meal eight</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, aperiam!</p>
+        <p>Price: $30</p>
     </article>
     <article class="nine">
         <h2>Meal nine</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, eligendi.</p>
+        <p>Price: $30</p>
     </article>
     <article class="ten">
         <h2>Meal ten</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, placeat.</p>
+        <p>Price: $30</p>
     </article>
 </main>
     
