adding in border and margin settings

--- a/index.html
+++ b/index.html
@@ -19,60 +19,71 @@
     </header>
     <main id="main">
     <article class="one">
-        <h2>Meal one</h2>
+        <h2>Meal <br>
+            one</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, cupiditate.</p>
         <p>Price: $30</p>
     </article>
     <article class="two">
-        <h2>Meal two</h2>
+        <h2>Meal <br>
+            two</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">        
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, magnam?</p>
+        <p>Price: $30</p>
     </article>
     <article class="three">
-        <h2>Meal three</h2>
+        <h2>Meal <br>
+            three</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">        
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, tenetur?</p>
         <p>Price: $30</p>
     </article>
     <article class="four">
-        <h2>meal four</h2>
+        <h2>meal <br>
+            four</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">        
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, cupiditate.</p>
         <p>Price: $30</p>
     </article>
     <article class="five">
-        <h2>Meal five</h2>
+        <h2>Meal <br>
+            five</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, commodi.</p>
         <p>Price: $30</p>
     </article>
     <article class="six">
-        <h2>Meal six</h2>
+        <h2>Meal <br>
+            six</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, optio!</p>
         <p>Price: $30</p>
     </article>
     <article class="seven">
-        <h2>Meal seven</h2>
+        <h2>Meal <br> 
+            seven</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis, ipsam!</p>
         <p>Price: $30</p>
     </article>
     <article class="eight">
-        <h2>Meal eight</h2>
+        <h2>Meal <br> 
+            eight</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, aperiam!</p>
         <p>Price: $30</p>
     </article>
     <article class="nine">
-        <h2>Meal nine</h2>
+        <h2>Meal <br> 
+            nine</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, eligendi.</p>
         <p>Price: $30</p>
     </article>
     <article class="ten">
-        <h2>Meal ten</h2>
+        <h2>Meal <br> 
+            ten</h2>
         <img src="https://www.pinclipart.com/picdir/big/558-5587606_pancakes-clipart-kawaii-pancakes-kawaii-transparent-kawaii-pancake.png" alt="grape">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, placeat.</p>
         <p>Price: $30</p>
